crates/swc_ecma_parser/tests/typescript-errors/parserSuperExpression2/input.ts.stderr
error: Expression expected
 --> $DIR/tests/typescript-errors/parserSuperExpression2/input.ts:3:10
  |
3 |     super<T>(0);
  |          ^

